fmg-cluster-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fmgcontainerhttps
  namespace: fortimanager
spec:
  sessionAffinity: ClientIP
  ports:
  - port: 80
    name: web
    protocol: TCP
    targetPort: 80
  - port: 443
    name: webgui
    protocol: TCP
    targetPort: 443
  - port: 8443
    name: webgui2
    protocol: TCP
    targetPort: 8443
  - port: 514
    name: oftpd
    protocol: TCP
    targetPort: 514
  - port: 541
    name: fgfm
    protocol: TCP
    targetPort: 541
  - port: 8123
    name: mast
    protocol: TCP
    targetPort: 8123
  - port: 8443
    name: webg
    protocol: TCP
    targetPort: 8443
  selector:
   app: fortimanager
  type: ClusterIP
