faz-ingress.yaml
apiVersion: networking.k8s.io/v1                                                                           
kind: Ingress                                                                                              
metadata:                                                                                                  
  name: fmg-ingress                                                                                        
spec:                                                                                                      
  rules:                                                                                                   
    - http:                                                                                                 
        paths:                                                                                               
        - path: /                                                                                            
          pathType: Prefix                                                                                   
          backend:                                                                                           
            service:                                                                                        
              name: fmgcontainerhttps                                                                       
              port:                                                                                          
                number: 80
